[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/tile.png" type="Texture" id=3]
[ext_resource path="res://resources/restart.png" type="Texture" id=5]
[ext_resource path="res://resources/gameover.png" type="Texture" id=6]
[ext_resource path="res://scenes/Platform.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://resources/restart_pressed.png" type="Texture" id=9]
[ext_resource path="res://resources/restart_hover.png" type="Texture" id=10]
[ext_resource path="res://resources/button_ESC.png" type="Texture" id=11]
[ext_resource path="res://resources/button_ESC_pressed.png" type="Texture" id=12]
[ext_resource path="res://scripts/HelpPanel.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 24 )

[sub_resource type="InputEventAction" id=7]
action = "restart"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventAction" id=10]
action = "help"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=12]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 26
font_data = ExtResource( 8 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Level" type="Node2D" parent="."]

[node name="Floor" type="StaticBody2D" parent="Level"]
show_behind_parent = true
position = Vector2( 512, 576 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Floor"]
shape = SubResource( 2 )

[node name="FloorSprite" type="Sprite" parent="Level/Floor"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 16, 0, 1024, 48 )

[node name="PlatformA" parent="Level" instance=ExtResource( 7 )]
position = Vector2( 224, 360 )

[node name="PlatformB" parent="Level" instance=ExtResource( 7 )]
position = Vector2( 800, 360 )

[node name="CoinPositions" type="Node2D" parent="Level"]

[node name="CoinPosition01" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 100, 85 )

[node name="CoinPosition02" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 300, 85 )

[node name="CoinPosition03" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 500, 85 )

[node name="CoinPosition04" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 700, 85 )

[node name="CoinPosition05" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 900, 85 )

[node name="CoinPosition06" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 200, 204 )

[node name="CoinPosition07" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 400, 204 )

[node name="CoinPosition08" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 600, 202 )

[node name="CoinPosition09" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 800, 202 )

[node name="CoinPosition10" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 100, 452 )

[node name="CoinPosition11" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 300, 452 )

[node name="CoinPosition12" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 500, 450 )

[node name="CoinPosition13" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 700, 450 )

[node name="CoinPosition14" type="Position2D" parent="Level/CoinPositions"]
position = Vector2( 900, 450 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 550 )

[node name="CanvasGameOver" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasGameOver"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Gameover" type="Sprite" parent="CanvasGameOver/Control"]
position = Vector2( 504, 232 )
texture = ExtResource( 6 )

[node name="ResetButton" type="TextureButton" parent="CanvasGameOver/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 12.0
margin_right = 80.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 80, 18 )
shortcut_in_tooltip = false
shortcut = SubResource( 8 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="CanvasMain" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasMain"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HelpButton" type="TextureButton" parent="CanvasMain/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 10.0
margin_right = -90.0
margin_bottom = 44.0
shortcut = SubResource( 11 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )

[node name="HelpLabel" type="Label" parent="CanvasMain/Control/HelpButton"]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 2.0
margin_right = 68.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 60, 15 )
custom_fonts/font = SubResource( 9 )
text = ": Help"
align = 1
valign = 1

[node name="HelpPanel" type="Panel" parent="CanvasMain/Control"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -290.0
margin_bottom = 154.0
mouse_filter = 2
script = ExtResource( 13 )

[node name="HelpLabel" type="Label" parent="CanvasMain/Control/HelpPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 264.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 12 )
text = "W or UP : Jump
A or LEFT : Move to Left
D or RIGHT : Move to Right

Enter or Space : Restart Game
Esc : Close or Open Help"

[node name="TimeLabel" type="Label" parent="CanvasMain/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 60, 15 )
custom_fonts/font = SubResource( 6 )
text = "Time:10"
align = 1
valign = 1

[node name="CoinsTotal" type="Label" parent="CanvasMain/Control"]
margin_left = 20.0
margin_top = 10.0
margin_right = 118.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "Coins:0"

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 21.0
one_shot = true
autostart = true

[connection signal="pressed" from="CanvasGameOver/Control/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="CanvasMain/Control/HelpButton" to="CanvasMain/Control/HelpPanel" method="_on_HelpButton_pressed"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
